# addon-item-warehouse-api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  package.json  pyproject.toml  repository.yaml  sonar-project.properties  sql_app.db
.github/workflows/: ci_deployment.yml  create_new_release.yml
item_warehouse/: config.yaml
item_warehouse/src/: requirements.txt
item_warehouse/src/api/: crud.py  exceptions.py  main.py  models.py
item_warehouse/src/api/v1/item/: create.py  delete.py  get.py  update.py
item_warehouse/src/api/v1/warehouse/: create.py  delete.py  get.py  update.py
item_warehouse/src/app/: _dependencies.py  _exceptions.py  crud.py  database.py  main.py  models.py  schemas.py
item_warehouse/src/website/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json
item_warehouse/src/website/app/: layout.tsx  page.tsx
item_warehouse/src/website/app/warehouse/[warehouse]/: page.tsx
item_warehouse/src/website/components/: Cell.client.tsx  Item.client.tsx  Layout.tsx  Sidebar.server.tsx  Sidebar.tsx  Warehouse.client.tsx  Warehouse.server.tsx  Warehouse.tsx
item_warehouse/src/website/services/: api.ts
item_warehouse/src/website/styles/: Cell.module.css  globals.css  layout.module.css  sidebar.module.css  warehouse.module.css
item_warehouse_api/: Dockerfile  config.yaml  run.sh
item_warehouse_api/src/: _dependencies.py  _helpers.py  crud.py  database.py  exceptions.py  main.py  models.py  requirements.txt  schemas.py
